--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "illusium",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.0.5",
+    "@rainbow-me/rainbowkit": "workspace:*",
     "@tanstack/react-query": "^5.29.0",
+    "buffer": "^6.0.3",
     "cssnano": "^6.1.2",
     "ethers": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
-    "viem": "2.x",
-    "wagmi": "^2.5.19"
+    "viem": "^2.8.12",
+    "wagmi": "^2.5.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
