--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
