--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cssnano": "^6.1.2",
     "ethers": "^6.11.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
