--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "workspace:*",
     "@tanstack/react-query": "^5.29.0",
+    "@types/react-gtm-module": "^2.0.3",
     "buffer": "^6.0.3",
     "cssnano": "^6.1.2",
     "ethers": "^6.11.1",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "viem": "^2.8.12",
